# airflow-k8s-operator

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  METRICS.md  README.md  base.py  config.py  config.yaml  connections.py  gcp.py  k8s_secret.py  main.py  pyproject.toml  variables.py
.github/workflows/: helm-ci.yaml  helm-release.yaml  integration-test.yaml  release.yaml  test.yaml
chart/airflow-k8s-operator/: Chart.yaml  README.md  values.yaml
chart/airflow-k8s-operator/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  podmonitor.yaml  rbac.yaml  secret.yaml  serviceaccount.yaml
chart/airflow-k8s-operator/templates/crds/: pool.yaml
config/: aws.py  base.py  client.py  gcp.py  k8s_secret.py  metrics.py
crds/: connection.yaml  variable.yaml
resources/: connections.py  pools.py  variables.py
tests/: connection-mixed-secret.yaml  connection-secret.yaml  connection.yaml  operator_test.py  pool-updated.yaml  pool.yaml  test_k8s_secret.py  variable-secret.yaml  variable-updated.yaml  variable_test.py
